// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb component should render breadcrumb with aria-label 1`] = `
<DocumentFragment>
  <nav
    aria-label="custom label"
    class="pf-v6-c-breadcrumb"
    data-ouia-component-id="OUIA-Generated-Breadcrumb-3"
    data-ouia-component-type="PF6/Breadcrumb"
    data-ouia-safe="true"
  >
    <ol
      class="pf-v6-c-breadcrumb__list"
      role="list"
    />
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumb component should render breadcrumb with children 1`] = `
<DocumentFragment>
  <nav
    aria-label="Breadcrumb"
    class="pf-v6-c-breadcrumb"
    data-ouia-component-id="OUIA-Generated-Breadcrumb-4"
    data-ouia-component-type="PF6/Breadcrumb"
    data-ouia-safe="true"
  >
    <ol
      class="pf-v6-c-breadcrumb__list"
      role="list"
    >
      <li
        class="pf-v6-c-breadcrumb__item"
      >
        <a
          class="pf-v6-c-breadcrumb__link"
          href="#"
        >
          Item 1
        </a>
      </li>
       
      <li
        class="pf-v6-c-breadcrumb__item"
      >
        <span
          class="pf-v6-c-breadcrumb__item-divider"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            width="1em"
          >
            <svg
              class="pf-v6-icon-default"
              viewBox="0 0 256 512"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
            <svg
              class="pf-v6-icon-unified"
              viewBox="0 0 32 32"
            >
              <path
                d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
              />
            </svg>
          </svg>
        </span>
        <a
          class="pf-v6-c-breadcrumb__link"
          href="#"
        >
          Item 1
        </a>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumb component should render breadcrumb with className 1`] = `
<DocumentFragment>
  <nav
    aria-label="Breadcrumb"
    class="pf-v6-c-breadcrumb className"
    data-ouia-component-id="OUIA-Generated-Breadcrumb-2"
    data-ouia-component-type="PF6/Breadcrumb"
    data-ouia-safe="true"
  >
    <ol
      class="pf-v6-c-breadcrumb__list"
      role="list"
    />
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumb component should render default breadcrumb 1`] = `
<DocumentFragment>
  <nav
    aria-label="Breadcrumb"
    class="pf-v6-c-breadcrumb"
    data-ouia-component-id="OUIA-Generated-Breadcrumb-1"
    data-ouia-component-type="PF6/Breadcrumb"
    data-ouia-safe="true"
  >
    <ol
      class="pf-v6-c-breadcrumb__list"
      role="list"
    />
  </nav>
</DocumentFragment>
`;
